--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-api key = AIzaSyA0i-DE5npqCIwQ5SGDZOwLAuOVmzZRWEA
+api key = API_KEY
 
-# CLIENT_ID=323558499472-ev40m6avs42k0l9d90ffer7umgcbm195.apps.googleusercontent.com
+# CLIENT_ID= CLIENT_ID
 
-# CLIENT_SECRET=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
+# CLIENT_SECRET= CLIENT_SECRET
